# Research-agent-cli

./: .env.example  .gitignore  README.md  pyproject.toml
src/research_agent/: __init__.py  cli.py  config.py  files.py  graph.py  llm.py  models.py  prompts.py  render.py  sources.py  storage.py
tests/: test_render.py
